dataset123/2025-2/610742602/users/14016319/executions/677928262_3691284457.log
== SUBMISSION (2025-08-26 21:20:14)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) * 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota575.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota800.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota700.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota1000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:25)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota5.75
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota8.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota10.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:23:50)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:57)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:10)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:23:21)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:20:52)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A * B * C * D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota2623.51
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota9830.4
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota5762.4
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota24000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota1500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:53)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:15)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) * 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota575.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota800.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota700.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota1000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:33)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:24)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota5.75
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota8.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota10.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:34)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:13)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) * 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota575.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota800.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota700.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota1000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:21:53)
-- CODE: 
N = float(input("Insira sua nota"))
N = float(input("Insira sua nota"))
N = float(input("Insira sua nota"))
N = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:34)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:34)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:55)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:19)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A + B + C + D) * 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota575.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota800.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota700.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota1000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:36)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:30)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* + B*2 + C*3 + D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota13.92
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota19.3
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota14.7
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota65.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua notaInsira sua notaInsira sua notaInsira sua nota9.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:39)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A * B * C * D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota2623.51
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota9830.4
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota5762.4
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota24000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota1500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:39)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A * B * C * D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota2623.51
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota9830.4
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota5762.4
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota24000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota1500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:40)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A * B * C * D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota2623.51
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota9830.4
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota5762.4
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota24000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota1500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:40)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:20:58)
-- CODE: 
N = float(input("Insira sua nota"))
A = N 
B = N * 2
C = N * 3
D = N * 4
MP = (A * B * C * D) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua nota2623.51
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua nota9830.4
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua nota5762.4
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua nota0.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua nota24000.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua nota1500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:22:35)
-- CODE: 
A = float(input("Insira sua nota"))
B = float(input("Insira sua nota"))
C = float(input("Insira sua nota"))
D = float(input("Insira sua nota"))


MP = (A* B*2 C*3 D*4) / 10
print(round(MP,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    MP = (A* B*2 C*3 D*4) / 10
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
